--- a/loading/animationFunction.css
+++ b/loading/animationFunction.css
@@ -513,3 +513,250 @@
 		-o-transform: rotate(465deg);
 	}
 }
+
+@keyframes updown{
+	0%{
+		transform: scale(1,1);
+		-webkit-transform: scale(1,1);
+		-moz-transform: scale(1,1);
+		-ms-transform: scale(1,1);
+		-o-transform: scale(1,1);
+	}
+	50%{
+		transform: scale(1,1.8);
+		-webkit-transform: scale(1,1.8);
+		-moz-transform: scale(1,1.8);
+		-ms-transform: scale(1,1.8);
+		-o-transform: scale(1,1.8);
+	}
+	100%{
+		transform: scale(1,1);
+		-webkit-transform: scale(1,1);
+		-moz-transform: scale(1,1);
+		-ms-transform: scale(1,1);
+		-o-transform: scale(1,1);
+	}
+}
+@-webkit-keyframes updown{
+	0%{
+		transform: scale(1,1);
+		-webkit-transform: scale(1,1);
+		-moz-transform: scale(1,1);
+		-ms-transform: scale(1,1);
+		-o-transform: scale(1,1);
+	}
+	50%{
+		transform: scale(1,1.8);
+		-webkit-transform: scale(1,1.8);
+		-moz-transform: scale(1,1.8);
+		-ms-transform: scale(1,1.8);
+		-o-transform: scale(1,1.8);
+	}
+	100%{
+		transform: scale(1,1);
+		-webkit-transform: scale(1,1);
+		-moz-transform: scale(1,1);
+		-ms-transform: scale(1,1);
+		-o-transform: scale(1,1);
+	}
+}
+@-moz-keyframes updown{
+	0%{
+		transform: scale(1,1);
+		-webkit-transform: scale(1,1);
+		-moz-transform: scale(1,1);
+		-ms-transform: scale(1,1);
+		-o-transform: scale(1,1);
+	}
+	50%{
+		transform: scale(1,1.8);
+		-webkit-transform: scale(1,1.8);
+		-moz-transform: scale(1,1.8);
+		-ms-transform: scale(1,1.8);
+		-o-transform: scale(1,1.8);
+	}
+	100%{
+		transform: scale(1,1);
+		-webkit-transform: scale(1,1);
+		-moz-transform: scale(1,1);
+		-ms-transform: scale(1,1);
+		-o-transform: scale(1,1);
+	}
+}
+@-ms-keyframes updown{
+	0%{
+		transform: scale(1,1);
+		-webkit-transform: scale(1,1);
+		-moz-transform: scale(1,1);
+		-ms-transform: scale(1,1);
+		-o-transform: scale(1,1);
+	}
+	50%{
+		transform: scale(1,1.8);
+		-webkit-transform: scale(1,1.8);
+		-moz-transform: scale(1,1.8);
+		-ms-transform: scale(1,1.8);
+		-o-transform: scale(1,1.8);
+	}
+	100%{
+		transform: scale(1,1);
+		-webkit-transform: scale(1,1);
+		-moz-transform: scale(1,1);
+		-ms-transform: scale(1,1);
+		-o-transform: scale(1,1);
+	}
+}
+@-o-keyframes updown{
+	0%{
+		transform: scale(1,1);
+		-webkit-transform: scale(1,1);
+		-moz-transform: scale(1,1);
+		-ms-transform: scale(1,1);
+		-o-transform: scale(1,1);
+	}
+	50%{
+		transform: scale(1,1.8);
+		-webkit-transform: scale(1,1.8);
+		-moz-transform: scale(1,1.8);
+		-ms-transform: scale(1,1.8);
+		-o-transform: scale(1,1.8);
+	}
+	100%{
+		transform: scale(1,1);
+		-webkit-transform: scale(1,1);
+		-moz-transform: scale(1,1);
+		-ms-transform: scale(1,1);
+		-o-transform: scale(1,1);
+	}
+}
+/*loading4*/
+@keyframes loading4{
+	0%{
+		margin-top: 150px;
+		transform: rotate(60deg);
+		-webkit-transform: rotate(60deg);
+		-moz-transform: rotate(60deg);
+		-ms-transform: rotate(60deg);
+		-o-transform: rotate(60deg);
+	}
+	50%{
+		margin-top: 50px;
+		transform: rotate(120deg);
+		-webkit-transform: rotate(120deg);
+		-moz-transform: rotate(120deg);
+		-ms-transform: rotate(120deg);
+		-o-transform: rotate(120deg);
+	}
+	100%{
+		margin-top: 150px;
+		transform: rotate(180deg);
+		-webkit-transform: rotate(180deg);
+		-moz-transform: rotate(180deg);
+		-ms-transform: rotate(180deg);
+		-o-transform: rotate(180deg);
+	}
+}
+@-webkit-keyframes loading4{
+	0%{
+		margin-top: 150px;
+		transform: rotate(60deg);
+		-webkit-transform: rotate(60deg);
+		-moz-transform: rotate(60deg);
+		-ms-transform: rotate(60deg);
+		-o-transform: rotate(60deg);
+	}
+	50%{
+		margin-top: 50px;
+		transform: rotate(120deg);
+		-webkit-transform: rotate(120deg);
+		-moz-transform: rotate(120deg);
+		-ms-transform: rotate(120deg);
+		-o-transform: rotate(120deg);
+	}
+	100%{
+		margin-top: 150px;
+		transform: rotate(180deg);
+		-webkit-transform: rotate(180deg);
+		-moz-transform: rotate(180deg);
+		-ms-transform: rotate(180deg);
+		-o-transform: rotate(180deg);
+	}
+}
+@-moz-keyframes loading4{
+	0%{
+		margin-top: 150px;
+		transform: rotate(60deg);
+		-webkit-transform: rotate(60deg);
+		-moz-transform: rotate(60deg);
+		-ms-transform: rotate(60deg);
+		-o-transform: rotate(60deg);
+	}
+	50%{
+		margin-top: 50px;
+		transform: rotate(120deg);
+		-webkit-transform: rotate(120deg);
+		-moz-transform: rotate(120deg);
+		-ms-transform: rotate(120deg);
+		-o-transform: rotate(120deg);
+	}
+	100%{
+		margin-top: 150px;
+		transform: rotate(180deg);
+		-webkit-transform: rotate(180deg);
+		-moz-transform: rotate(180deg);
+		-ms-transform: rotate(180deg);
+		-o-transform: rotate(180deg);
+	}
+}
+@-ms-keyframes loading4{
+	0%{
+		margin-top: 150px;
+		transform: rotate(60deg);
+		-webkit-transform: rotate(60deg);
+		-moz-transform: rotate(60deg);
+		-ms-transform: rotate(60deg);
+		-o-transform: rotate(60deg);
+	}
+	50%{
+		margin-top: 50px;
+		transform: rotate(120deg);
+		-webkit-transform: rotate(120deg);
+		-moz-transform: rotate(120deg);
+		-ms-transform: rotate(120deg);
+		-o-transform: rotate(120deg);
+	}
+	100%{
+		margin-top: 150px;
+		transform: rotate(180deg);
+		-webkit-transform: rotate(180deg);
+		-moz-transform: rotate(180deg);
+		-ms-transform: rotate(180deg);
+		-o-transform: rotate(180deg);
+	}
+}
+@-o-keyframes loading4{
+	0%{
+		margin-top: 150px;
+		transform: rotate(60deg);
+		-webkit-transform: rotate(60deg);
+		-moz-transform: rotate(60deg);
+		-ms-transform: rotate(60deg);
+		-o-transform: rotate(60deg);
+	}
+	50%{
+		margin-top: 50px;
+		transform: rotate(120deg);
+		-webkit-transform: rotate(120deg);
+		-moz-transform: rotate(120deg);
+		-ms-transform: rotate(120deg);
+		-o-transform: rotate(120deg);
+	}
+	100%{
+		margin-top: 150px;
+		transform: rotate(180deg);
+		-webkit-transform: rotate(180deg);
+		-moz-transform: rotate(180deg);
+		-ms-transform: rotate(180deg);
+		-o-transform: rotate(180deg);
+	}
+}
