--- a/loading/loading1.css
+++ b/loading/loading1.css
@@ -7,6 +7,9 @@ html{
 body{
 	display: block;
 }
+li{
+	list-style: none;
+}
 .loading1{
 	display: inline-block;width: 100%;
 	text-align: center;
@@ -304,3 +307,4 @@ body{
 	left: 50%;margin-left:-20px;
 	bottom: 10px;
 }
+
