--- a/loading/loading2.less
+++ b/loading/loading2.less
@@ -1,4 +1,5 @@
 .loading5{
+	margin-bottom: 50px;
 	overflow: hidden;width: 150px;height: 200px;
 	margin:50px auto 50px; position: relative;
 	animation: loading5 3s ease-in-out infinite;
