According to the platform type redirect URL

--- a/autoComplet/css/aC.css
+++ b/autoComplet/css/aC.css
@@ -49,7 +49,7 @@
 	border-top: none;
 	display: none;
 	max-height: 240px;
-	overflow-y: scroll;
+	overflow-y: auto;
 }
 .autoComp ul li {
 	list-style: none;
